[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["kosi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlmodel = "^0.0.22"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
